src/tui/snapshots/control_acceso__tui__visual_tests__CambioPassword_60x22_Brisas.snap
---
source: src/tui/visual_tests.rs
expression: volcado
---
=== texto ===
                                                            
 BRISAS CLI                        Operador de prueba · ROO 
 CAMBIAR MI CONTRASEÑA                                ··:·· 
 ────────────────────────────────────────────────────────── 
                                                            
      CONTRASEÑA ACTUAL                                     
                                                            
      ────────────────────────────────────────────────      
                                                            
      CONTRASEÑA NUEVA                                      
                                                            
      ────────────────────────────────────────────────      
                                                            
      CONFIRMAR CONTRASEÑA NUEVA                            
                                                            
      ────────────────────────────────────────────────      
                                                            
                                                            
 Confirme su identidad antes de cambiar la contraseña       
 TAB/↑↓ Cambiar campo  ENTER Guardar  ESC Volver            
 F2 Salida rápida  F7 Tema                                  
                                                            

=== estilos ===
"                                                            " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"BRISAS CLI" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
"                        " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"Operador de prueba · ROO" fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"CAMBIAR MI CONTRASEÑA" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
"                                " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"··:··" fg=Rgb(220, 170, 70) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"──────────────────────────────────────────────────────────" fg=Rgb(100, 120, 126) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                            " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"      " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"CONTRASEÑA ACTUAL                               " fg=Rgb(70, 200, 215) bg=Black mod=BOLD
"      " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"      " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                " fg=Rgb(220, 225, 228) bg=Black mod=BOLD
"      " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"      " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"────────────────────────────────────────────────" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
"      " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                            " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"      " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"CONTRASEÑA NUEVA                                " fg=Rgb(145, 158, 164) bg=Black mod=NONE
"      " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                            " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"      " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"────────────────────────────────────────────────" fg=Rgb(145, 158, 164) bg=Black mod=NONE
"      " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                            " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"      " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"CONFIRMAR CONTRASEÑA NUEVA                      " fg=Rgb(145, 158, 164) bg=Black mod=NONE
"      " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                            " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"      " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"────────────────────────────────────────────────" fg=Rgb(145, 158, 164) bg=Black mod=NONE
"      " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                            " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                            " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"Confirme su identidad antes de cambiar la contraseña      " fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"TAB/↑↓" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
" Cambiar campo  " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"ENTER" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
" Guardar  " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"ESC" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
" Volver            " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"F2" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
" Salida rápida  " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"F7" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
" Tema                                  " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                            " fg=Rgb(220, 225, 228) bg=Black mod=NONE
